k8s/02c-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diary-vue-db
  namespace: diary-vue
spec:
  selector:
    app: diary-vue-db
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
