k8s/03b-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diary-vue-app
  namespace: diary-vue
spec:
  selector:
    app: diary-vue-app
  ports:
    - port: 3000
      targetPort: 3000
