k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diary-vue
  namespace: diary-vue
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - trade-basic.com
        - www.trade-basic.com
      secretName: trade-basic-tls
  rules:
    - host: trade-basic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diary-vue-app
                port:
                  number: 3000
    - host: www.trade-basic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diary-vue-app
                port:
                  number: 3000
